Fix some spacing

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -117,9 +117,9 @@ input.bg-dark::placeholder {
 }
 
 .layout-column {
-  height: calc(100vh - 65px - 1.5rem);
+  height: calc(100vh - 65px);
   overflow-y: scroll;
-  padding-bottom: 1.5em;
+  padding: 1.5em 0;
 }
 
 @media (max-width: 990px) {
